worked on contrast issue

--- a/style.css
+++ b/style.css
@@ -46,8 +46,9 @@ body {
 
   .landing-body h1 {
     font-size: 80px;
-    color: darkslategray;
+    color: lightslategray;
     margin: 18px;
+    background-color: rgba(0,0,0,0.2);
   }
 
   .landing-body h4 {
@@ -106,7 +107,7 @@ body {
    }
 
   .help-body h2 {
-    font-size: 50px;
+    font-size: 45px;
     color: silver;
     margin: 20px;
   }
@@ -132,10 +133,10 @@ body {
      transition-duration: 2s;
    }
 
-    .help-button:hover {
-      background-color: lightslategray;
-      color: silver;
-    }
+   .help-button:hover {
+     background-color: lightslategray;
+     color: silver;
+   }
 
    .help-bottom {
      background-color: black;
@@ -143,7 +144,62 @@ body {
      border: 2px solid silver;
    }
 
-    .help-bottom a {
-      font-size: 40px;
-      color: silver;
-    }
+   .help-bottom a {
+     font-size: 40px;
+     color: silver;
+   }
+
+  .info-top {
+    background-color: darkslategray;
+    height: 75px;
+    border: 2px solid black;
+  }
+
+  .info-body {
+    background-image: url("maze-entrance.png");
+    height: auto;
+    border: 2px solid black;
+  }
+
+  .info-body h2 {
+    font-size: 45px;
+    color: silver;
+    margin: 20px;
+  }
+
+  .info-body p {
+    font-size: 20px;
+    color: lightslategray;
+    margin: 18px;
+  }
+
+  .info-button {
+    background-color: darkslategray;
+    border: 3px solid silver;
+    border-radius: 24px;
+    color: gray;
+    padding: 16px 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition-duration: 2s;
+  }
+
+  .info-button:hover {
+    background-color: lightslategray;
+    color: silver;
+  }
+
+ .info-bottom {
+   background-color: black;
+   height: 80px;
+   border: 2px solid silver;
+ }
+
+ .info-bottom a {
+   font-size: 40px;
+   color: silver;
+ }
